fix swagger description
